src/css/custom.css
/* stylelint-disable docusaurus/copyright-header */
/**
 * Any CSS included here will be global. The classic template
 * bundles Infima by default. Infima is a CSS framework designed to
 * work well for content-centric websites.
 */

/* You can override the default Infima variables here. */

/* For local testing */

/* @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,400;0,600;1,400;1,600&display=swap'); */

/* Self-hosted subsetted fonts from /static/fonts */
@import "./fonts.css";

/********** Global variables ************/

:root {
  --ifm-color-primary: #00617c;
  --ifm-color-primary-dark: var(--ifm-color-primary);
  --ifm-color-primary-darker: var(--ifm-color-primary);
  --ifm-color-primary-darkest: var(--ifm-color-primary);
  --ifm-color-primary-light: #009cbc;
  --ifm-color-primary-lighter: var(--ifm-color-primary);
  --ifm-color-primary-lightest: var(--ifm-color-primary);
  --ifm-code-font-size: 95%;
  --ifm-font-family-base: "IBM Plex Sans", sans-serif;
  --ifm-heading-color: var(--ifm-color-primary);
  --ifm-color-secondary: #873593;
  --ifm-color-secondary-dark: var(--ifm-color-secondary);
  --ifm-color-secondary-darker: var(--ifm-color-secondary);
  --ifm-color-secondary-darkest: var(--ifm-color-secondary);
  --ifm-color-secondary-light: var(--ifm-color-secondary);
  --ifm-color-secondary-lighter: var(--ifm-color-secondary);
  --ifm-color-secondary-lightest: var(--ifm-color-secondary);
  --ifm-color-danger: #e30613;
  --ifm-color-danger-dark: var(--ifm-color-danger);
  --ifm-color-danger-darker: var(--ifm-color-danger);
  --ifm-color-danger-darkest: var(--ifm-color-danger);
  --ifm-color-danger-light: var(--ifm-color-danger);
  --ifm-color-danger-lighter: var(--ifm-color-danger);
  --ifm-color-danger-lightest: var(--ifm-color-danger);
  --ifm-color-success: var(--ifm-color-secondary);
  --ifm-color-success-dark: var(--ifm-color-success);
  --ifm-color-success-darker: var(--ifm-color-success);
  --ifm-color-success-darkest: var(--ifm-color-success);
  --ifm-color-success-light: var(--ifm-color-success);
  --ifm-color-success-lighter: var(--ifm-color-success);
  --ifm-color-success-lightest: var(--ifm-color-success);
  --ifm-color-info: #009cbc;
  --ifm-color-info-dark: var(--ifm-color-info);
  --ifm-color-info-darker: var(--ifm-color-info);
  --ifm-color-info-darkest: var(--ifm-color-info);
  --ifm-color-info-light: var(--ifm-color-info);
  --ifm-color-info-lighter: var(--ifm-color-info);
  --ifm-color-info-lightest: var(--ifm-color-info);
  --ifm-color-caution: #f1de1e;
  --ifm-color-caution-dark: var(--ifm-color-caution);
  --ifm-color-caution-darker: var(--ifm-color-caution);
  --ifm-color-caution-darkest: var(--ifm-color-caution);
  --ifm-color-caution-light: var(--ifm-color-caution);
  --ifm-color-caution-lighter: var(--ifm-color-caution);
  --ifm-color-caution-lightest: var(--ifm-color-caution);
  --ifm-global-shadow-lw: 0 3px 4px 0 rgba(0, 0, 0, 0.3);
  --ifm-link-color: var(--ifm-color-primary);
  --ifm-link-decoration: bold;
  --ifm-link-hover-color: var(--ifm-link-color);
  --ifm-link-hover-decoration: underline;
  --ifm-footer-link-hover-color: var(--ifm-color-danger);

  --ifm-table-border-width: 0;
  --ifm-table-head-background: var(--ifm-color-primary);
  --ifm-table-head-color: white;

  --ifm-navbar-search-input-placeholder-color: var(--ifm-color-emphasis-800);

  --ifm-font-size-base: 13pt;

  --ifm-button-border-radius: 0;

  --ifm-navbar-height: 5rem;
  --ifm-navbar-shadow: transparent;
  --n4c-navbar-border: #e0e0e0;

  --ifm-alert-border-left-width: 1pt;
  --ifm-alert-border-width: 1pt;
  --ifm-alert-border-radius: 0;
  --ifm-alert-shadow: transparent;

  --n4c-col-width: 250px;

  --n4c-button-width: 280px;
  --n4c-button-height: 240px;

  --n4c-button-secondary-width: 300px;

  --n4c-button-vpad: 10px;
  --n4c-button-hpad: 5px;

  --n4c-hover-scale: 105%;
  --n4c-transform-time: 175ms;

  /* Repos */
  --repo-data-box: #f0f0f0;
  --repo-line: #7f7f7f;
}

/********** Algolia Search ************/

[data-theme="light"] .DocSearch {
  /* --docsearch-primary-color: var(--ifm-color-primary); */
  /* --docsearch-text-color: var(--ifm-font-color-base); */
  --docsearch-muted-color: var(--ifm-color-primary);
  --docsearch-container-background: rgba(94, 100, 112, 0.7);
  --docsearch-focus-color: var(--ifm-color-primary);
  --docsearch-highlight-color: var(--ifm-color-primary);
  --docsearch-secondary-text-color: var(--ifm-color-primary);
  /* Modal */
  --docsearch-modal-background: var(--ifm-color-white);
  /* Search box */
  --docsearch-searchbox-background: var(--ifm-color-white);
  --docsearch-searchbox-focus-background: var(--ifm-color-white);
  --docsearch-icon-color: var(--ifm-color-primary);
  /* Hit */
  --docsearch-hit-color: var(--ifm-color-primary);
  --docsearch-hit-active-color: var(--ifm-color-white);
  --docsearch-hit-background: var(--ifm-color-white);
  --docsearch-hit-highlight-color: var(--ifm-menu-color-background-hover);
  /* Footer */
  --docsearch-footer-background: var(--ifm-color-white);
}

/********** General and Landing page ************/

.theme-announcement-bar {
  font-size: 20px;
  --site-announcement-bar-stripe-color1: rgba(227, 6, 19, 0.15);
  --site-announcement-bar-stripe-color2: white;
  background: repeating-linear-gradient(
    -35deg,
    var(--site-announcement-bar-stripe-color1),
    var(--site-announcement-bar-stripe-color1) 20px,
    var(--site-announcement-bar-stripe-color2) 10px,
    var(--site-announcement-bar-stripe-color2) 40px
  );
}

.navbar__logo img {
  margin-bottom: 0%;
  height: 110%;
  margin-top: -6px;
}

.navbar {
  border-bottom: 1px solid var(--n4c-navbar-border);
}

.main-wrapper {
  display: flex;
}

.footer__link-item {
  color: var(--ifm-footer-link-color);
  line-height: 2;
  font-weight: unset;
}

.footer--dark {
  --ifm-footer-background-color: var(--ifm-color-primary);
  --ifm-footer-color: var(--ifm-footer-link-color);
  --ifm-footer-link-color: var(--ifm-color-white);
  --ifm-footer-title-color: var(--ifm-color-white);
  font-weight: unset;
  border-top: 1px solid white;
}

.footer__title {
  color: var(--ifm-footer-title-color);
  font: bold var(--ifm-h3-font-size) / var(--ifm-heading-line-height)
    var(--ifm-font-family-base);
  margin-bottom: var(--ifm-heading-margin-bottom);
}

.footer__copyright {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
}

.footer__copyright--image {
  margin: 1rem;
}

.footer__copyright--text {
  margin: 0.1rem;
  text-align: left;
  max-width: 100%;
}

.footer__copyright--text p {
  text-align: left;
  text-wrap: balance;
}

.footer__copyright--text a {
  color: var(--ifm-footer-link-color);
  font-weight: unset;
}

@media screen and (max-width: 1400px) {
  .footer__copyright {
    flex-direction: column;
    align-items: stretch;
  }

  .footer__copyright--image {
    margin: 0.5rem;
  }

  .footer__copyright--text {
    margin: 0.1rem;
    max-width: 100%;
    justify-content: center;
  }

  .footer__copyright--text p {
    text-align: center;
  }
}

/********** Buttons ************/

.buttons {
  display: flex;
  align-items: center;
  justify-content: center;
}

/*  .button--primary {
   --ifm-button-border-color: white; 
} */

.button--primary:hover {
  /* --ifm-button-background-color: var(--ifm-color-danger); */
  /* --ifm-button-border-color: white; */
  transform: scale(var(--n4c-hover-scale));
  transition: transform var(--n4c-transform-time) ease-in-out;
}

.button.button--secondary {
  color: var(--ifm-color-primary);
  --ifm-button-background-color: white;
  --ifm-button-border-color: var(--ifm-color-primary);
}

.button--secondary:hover {
  /*   --ifm-button-background-color: var(--ifm-color-danger); */
  transform: scale(var(--n4c-hover-scale));
  transition: transform var(--n4c-transform-time) ease-in-out;
}

.button.button--secondary h1,
.button.button--secondary h2,
.button.button--secondary h3,
.button.button--secondary h4,
.button.button--secondary h5,
.button.button--secondary h6,
.button.button--secondary a {
  color: var(--ifm-color-primary);
  text-align: left;
  white-space: normal;
  word-wrap: break-word;
}

.button.button--secondary li,
.button.button--secondary em {
  color: var(--ifm-color-primary);
  text-align: left;
  font-weight: 400;
  white-space: normal;
  word-wrap: break-word;
}

.button.button--primary {
  color: var(--ifm-color-white);
}

.button.button--primary h1,
.button.button--primary h2,
.button.button--primary h3,
.button.button--primary h4,
.button.button--primary h5,
.button.button--primary h6 {
  color: white;
  text-align: left;
  white-space: normal;
  word-wrap: break-word;
}

.button.button--primary li,
.button.button--primary em {
  color: var(--ifm-color-white);
  text-align: left;
  font-weight: 400;
  white-space: normal;
  word-wrap: break-word;
}

.button--negative {
  --ifm-button-background-color: var(--ifm-color-white);
  border-radius: 10px;
  color: var(--ifm-color-primary);
  font-weight: 400;
}

.button--negative:hover {
  /*   --ifm-button-background-color: var(--ifm-color-danger); */
  transform: scale(var(--n4c-hover-scale));
  transition: transform var(--n4c-transform-time) ease-in-out;
}

.button.button--negative h1,
.button.button--negative h2,
.button.button--negative h3,
.button.button--negative h4,
.button.button--negative h5,
.button.button--negative h6,
.button.button--negative a {
  color: var(--ifm-color-primary);
  text-align: left;
  white-space: normal;
  word-wrap: break-word;
}

/********** Links ************/

a {
  font-weight: bold;
}

a.button.button--primary:not(.button--outline):hover {
  color: white;
  text-decoration: unset;
}

a.button.button--secondary:not(.button--outline):hover,
a.button.button--negative:not(.button--outline):hover {
  color: var(--ifm-color-primary);
  text-decoration: unset;
}

a:not([href]) {
  text-decoration: none;
}

p,
.markdown > p,
.markdown > pre,
.markdown > ul {
  margin-bottom: var(--ifm-leading);
  text-align: justify;
}

.menu__link {
  font-weight: unset;
}

.pagination-nav__link {
  border: none;
  border-radius: var(--ifm-pagination-nav-border-radius);
  padding: var(--ifm-global-spacing);
  transition: background-color var(--ifm-button-transition-duration)
    var(--ifm-transition-timing-default);
}

.pagination-nav__link:hover {
  background-color: var(--ifm-menu-color-background-hover);
}

.table-of-contents__link {
  color: black;
  font-weight: unset;
}

.table-of-contents__link--active,
.table-of-contents__link--active code,
.table-of-contents__link:hover,
.table-of-contents__link:hover code {
  color: var(--ifm-color-primary);
  text-decoration: none;
}

/********** Search tool ************/

.searchResultItem_18XW a,
.searchResultItem_18XW h2 {
  /*  color: unset;*/
  color: var(--ifm-color-primary);
  font-size: unset;
}

mark {
  color: white;
  background: var(--ifm-color-danger);
  /*  background: var(--ifm-color-primary);*/
}

/********** Bullets ************/

ul {
  list-style-type: "\2B22\  ";
}

ul li::marker {
  position: absolute;
  font-size: 0.9em;
  color: var(--ifm-color-primary);
}

.button li::marker {
  color: unset;
}

ul ul {
  list-style-type: "\2B21\  ";
}

/********** Alerts ************/

.alert {
  color: black;
  --ifm-alert-foreground-color: black;
  --ifm-alert-background-color: white;
  border-style: dashed;
  text-align: justify;
}

.alert a {
  color: var(--ifm-color-primary);
  text-decoration: none;
}

.alert a:hover {
  color: var(--ifm-color-primary);
  text-decoration: var(--ifm-link-decoration);
}

/********** Tables ************/

table {
  border: 0.5px solid var(--ifm-color-primary);
}

table thead tr {
  border-bottom: 1px solid var(--ifm-color-primary);
}

